--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -7,20 +7,15 @@ a {
   text-decoration: none;
 }
 
-.el-submenu__title {
+.el-menu-item, .el-submenu__title {
   height: 46px !important;
   line-height: 46px !important;
 }
-
+/*
 .el-submenu__title:hover, .el-menu-item:hover {
   background-color: #4a5064 !important;
-}
+}*/
 
-.el-menu-item {
-  height: 46px !important;
-  line-height: 46px !important;
-  background-color: #333744;
-}
 .logo-hl{
   background-size: 120px 50px;
   background-image: url("../svg/logos.svg");
@@ -50,7 +45,11 @@ a {
   padding: 5px 10px !important;
 }
 
-.el-table td{padding: 6px 0 !important;}/*表格行间距*/
+.el-table{ font-size: 12px !important; border:1px solid #e5e5e5;}
+.el-table--fit {border-right: 1px solid #e5e5e5 !important;}
+.el-table td{padding: 4px 0 !important;}/*表格行间距*/
+.el-table th{padding: 7px 0 !important; background-color: #fafafa !important;}
+.el-table thead{color: #333333 !important;}
 
 .log-lv-title{color: #e7e7ea;}
 .log-lv-info{color: #3dd83d;}
