--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -49,7 +49,7 @@ a {
 .el-table--fit {border-right: 1px solid #e5e5e5 !important;}
 .el-table td{padding: 2px 0 !important;}/*表格行间距*/
 .el-table th{padding: 7px 0 !important; background-color: #fafafa !important;}
-.el-table thead{color: #333333 !important;}
+.el-table thead{color: #2e2e2e !important; font-size: 12px}
 
 .log-lv-title{color: #e7e7ea;}
 .log-lv-info{color: #3dd83d;}
