--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -48,7 +48,7 @@ a {
 .el-table{ font-size: 12px !important; border:1px solid #e5e5e5;}
 .el-table--fit {border-right: 1px solid #e5e5e5 !important;}
 .el-table td{padding: 2px 0 !important;}/*表格行间距*/
-.el-table th{padding: 7px 0 !important; background-color: #fafafa !important;}
+.el-table th{padding: 7px 0 !important; background-color: #8c939d !important;}
 .el-table thead{color: #2e2e2e !important; font-size: 12px}
 .el-pagination{background-color: #ffffff;border: 1px solid #e5e5e5;border-top: 0}
 
