--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -80,5 +80,26 @@ body .el-table th.gutter{display: table-cell!important;}
   height: 28px !important;
 }
 
+/* 全局滚动条样式 */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: transparent;
+  border-radius: 10px;
+  z-index: 999;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: #fff;
+  border-radius: 10px;
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #ced4df;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ced4df;
+}
+
 
 
